update order proccessing

--- a/Online Shop/OstaviRecenziju.html
+++ b/Online Shop/OstaviRecenziju.html
@@ -1,305 +1,22 @@
 ﻿<!DOCTYPE html>
-<html data-bs-theme="light">
+<html data-bs-theme="light" lang="sr">
 <head>
+    <title>Ostavljanje Recenzije - Shopy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>Ostavljanje Recenzije - Shopy</title>
     <link rel="stylesheet" href="Content/bootstrap.min.css">
+    <link href="Content/shopy.css" rel="stylesheet" />
     <script src="Scripts/jquery-3.7.0.min.js"></script>
+    <script src="Scripts/load-optimizer.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
     <script src="Scripts/bootstrap.bundle.min.js"></script>
     <script src="Scripts/modernizr-2.8.3.js"></script>
-     <style>
-        .navbar .login-btn {
-            position: absolute;
-            top: 7px;
-            right: 95px;
-        }
-
-        .navbar .profil-btn {
-            position: absolute;
-            top: 10px;
-            right: 35px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .login-btn {
-                right: 75px;
-            }
-        }
-
-        .navbar .register-btn {
-            position: absolute;
-            top: 7px;
-            right: 15px;
-        }
-
-        @media (max-width: 767px) {
-            .navbar .register-btn {
-                right: 175px;
-            }
-        }
-    </style>
-    <script>
-        var uloga;
-        var Id;
-        // ako je ulogovan, prebaci ga na index - slucaj da ide na back opciju
-        $.ajax({
-            url: "/api/auth/Ulogovan",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                if (response != null) {
-                    if (JSON.parse(response).Kod !== 0) // korisnik je ulogovan, ne moze da se registruje
-                    {
-                        window.location.href = "Index.html";
-                    }
-                }
-            }
-        });
-
-        // ako je ulogovan, prebaci prikazi meni u zavisnoti od uloge
-        $.ajax({
-            url: "/api/auth/AuthKorisnik",
-            type: "GET",
-            async: false,
-            cache: false,
-            dataType: "json",
-            contentType: "application/json; charset=utf-8",
-            success: function (response) {
-                var data = JSON.parse(response);
-                if (data.KorisnickoIme !== "") {
-                    // prikazi podatke i promeni meni
-                    // sakri dugmice za login i register
-                    $(function () {
-                        $("#pl").remove();
-
-                        // prikazi meni za nalog
-                        $('#poruka').text("Dobrodošli nazad, " + data.KorisnickoIme);
-
-                        // Prikazi samo dugmice vezane za korisnika koji ima datu ulogu
-                        uloga = data.Uloga;
-
-                        if (uloga !== 0) {
-                            // nije pitanju kupac - povratak na pocetnu stranicu
-                            window.location.href = "MojProfil.html";
-                        }
-
-                        // id iz url
-                        let searchParams = new URLSearchParams(window.location.search)
-                        if (!searchParams.has('id')) window.location.href = "Index.html";
-                        Id = searchParams.get('id');
-
-                        // popuni informacije o porudzbini za koju se dodaje recenzija
-                        $.ajax({
-                            url: "/api/orders/PorudzbinaRecenzija",
-                            type: "POST",
-                            data: JSON.stringify({
-                                Id: Id
-                            }),
-                            async: false,
-                            cache: false,
-                            dataType: "json",
-                            contentType: "application/json; charset=utf-8",
-                            success: function (response) {
-                                var data = JSON.parse(response);
-
-                                if (data.hasOwnProperty("Id")) {
-                                    // tek sada moze videti formu
-                                    $("#bodyauth").removeClass("d-none");
-
-                                    // popunjavanje forme podacima
-                                    $("#pid").text("Porudžbina #" + data.Id);
-                                    $("#datum").text("Izvršena: " + data.Datum);
-                                    $("#nazivpr").text(data.NazivProizvoda);
-                                    $("#ukupaniznos").text("Ukupan iznos: " + data.UkupanIznos + " RSD");
-                                    $("#slikapr").attr('src', "/Uploads/" + data.Slika);
-                                    return false;
-                                }
-                                else {
-                                    // desila se greska
-                                    $("#divgreske").removeClass('d-none');
-                                    $("#greske").text(data.Poruka);
-                                }
-                            }
-                        });
-                    });
-                }
-                else {
-                    $(function () {
-                        // korisnik nije ulogovan - prikazi login i register
-                        $("#pl").show();
-
-                        // sakri meni za nalog
-                        $('#profil').addClass('d-none');
-                    });
-                }
-            }
-        });
-
-
-        // akcija za dodavanje recenzije
-        jQuery(function () {
-            $("#divgreske").addClass("d-none");
-            $("body").removeClass("d-none");
-
-            $("#slika").on('change', function () {
-                if (slika.files[0] === undefined) {
-                    pregled.src = "/Images/productplc.jpg";
-                }
-                else {
-                    pregled.src = URL.createObjectURL(slika.files[0]);
-                }
-            });
-
-            // provera unosa - verifikacija unosa na klijentu
-            $("#dodajrecenzijubtn").on('click', function () {
-                var naslov = $("#naslov").val();
-                var sadrzaj = $("#sadrzaj").val();
-                var slika = $("#slika").val();
-                var greska = false;
-
-                // provera unosa na klijentu
-                if (naslov.length < 3) {
-                    $("#g1").addClass("d-block");
-                    $("#g1").removeClass("d-none");
-                    $("#naslov").addClass("is-invalid");
-                    $("#g1").text("Naslov mora imati minimalno 3 karaktera!");
-                    greska = true;
-                }
-                else {
-                    $("#g1").addClass("d-none");
-                    $("#naslov").removeClass("is-invalid");
-                    $("#naslov").removeClass("invalid-feedback");
-                    $("#naziv").add("is-valid");
-                }
-
-                if (sadrzaj.length < 20) {
-                    $("#g2").addClass("d-block");
-                    $("#g2").removeClass("d-none");
-                    $("#sadrzaj").addClass("is-invalid");
-                    $("#g2").removeClass("d-none");
-                    $("#g2").text("Sadržaj mora imati minimalno 20 karaktera!");
-                    greska = true;
-                }
-                else {
-                    $("#g2").addClass("d-none");
-                    $("#sadrzaj").removeClass("is-invalid");
-                    $("#sadrzaj").removeClass("invalid-feedback");
-                    $("#sadrzaj").add("is-valid");
-                }
-
-                if (slika.length <= 0) {
-                    $("#g3").addClass("d-block");
-                    $("#g3").removeClass("d-none");
-                    $("#slika").addClass("is-invalid");
-                    $("#g6").text("Morate odabrati sliku proizvoda!");
-                    greska = true;
-                }
-                else {
-                    $("#g3").addClass("d-none");
-                    $("#slika").removeClass("is-invalid");
-                    $("#slika").removeClass("invalid-feedback");
-                    $("#slika").add("is-valid");
-                }
-
-                if (greska === true) return; // ne izvrsava se ajax poziv - rasterecuje se server od callbacks
-
-                // priprema slike za slanje
-                var slikaAjax = new FormData();
-                slikaAjax.append("slika", $("#slika")[0].files[0]);
-
-                // ajax poziv ka api-ju za upload slike
-                $.ajax({
-                    url: "/api/storage/OtpremanjeSlike",
-                    type: "POST",
-                    contentType: false,
-                    processData: false,
-                    data: slikaAjax,
-                    success: function (response) {
-                        
-                        if (response != null) {
-                            var msg = JSON.parse(response);
-                            if (msg.Kod === 0) // upis podataka o recenziji je prosao uspesno
-                            {
-                                // ajax poziv ka API-ju za kreiranje recenzije
-                                $.ajax({
-                                    url: "/api/reviews/DodavanjeRecenzije",
-                                    type: "POST",
-                                    data: JSON.stringify({
-                                        PorudzbinaId: parseInt(Id),
-                                        Naslov: naslov,
-                                        Sadrzaj: sadrzaj,
-                                        Slika: msg.Poruka
-                                    }),
-                                    async: false,
-                                    cache: false,
-                                    dataType: "json",
-                                    contentType: "application/json; charset=utf-8",
-                                    success: function (response) {
-
-                                        if (response != null) {
-                                            if (JSON.parse(response).Kod === 0) {
-                                                window.location.href = "MojePorudzbine.html?msg=Porudžbina uspešno recenzirana!";
-                                                return false;
-                                            }
-                                        }
-                                    }
-                                });
-
-                                return false;
-                            }
-                            else {
-                                // desila se greska - prikazi je
-                                $("#divgreske").removeClass('d-none');
-                                $("#greske").text(JSON.parse(response).Poruka);
-                            }
-                        }
-                    }
-                });
-            });
-        });
-
-
-    </script>
+    <script src="Scripts/api/auth/auth-base.js"></script>
+    <script src="Scripts/api/reviews/review-add.js"></script>
+    <script src="Scripts/loader-finisher.js"></script>
 </head>
-<body id="bodyauth" class="d-none">
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
-        <div class="container">
-            <a href="/" class="navbar-brand">Shopy</a>
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li><a href="/" class="nav-link">Početna stranica</a></li>
-                    <li id="pl">
-                        <a href="Registracija.html" type="submit" id="registracija" class="btn btn-outline-light navbar-btn login-btn">Registracija</a>
-                        <a href="Prijava.html" type="submit" id="prijava" class="btn btn-outline-light navbar-btn register-btn">Prijava</a>
-                    </li>
-                    <li id="profil">
-                        <div class="btn-group profil-btn">
-                            <button type="button" class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                                <span id="poruka"></span>
-                            </button>
-                            <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="MojProfil.html" id="mojprofil">Moj profil</a></li>
-                                <li><a class="dropdown-item" href="IzmenaLozinke.html" id="izmenalozinke">Izmena lozinke</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item text-danger" id="odjava" href="#">Odjava sa platforme</a></li>
-                            </ul>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+<body class="d-none bsp">
+    <div id="nm"></div>
     <div class="container body-content mt-4 mb-5">
         <main>
             <div class="container">
@@ -310,7 +27,7 @@
                                 <div class="card" style="border-radius: 1rem;">
                                     <div class="row g-0">
                                         <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                            <img src="Images/rgbg.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
+                                            <img src="Images/pastel-2.jpg" alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem;" />
                                         </div>
                                         <div class="col-md-6 col-lg-7 d-flex align-items-center">
                                             <div class="card-body p-4 p-lg-5 text-black">
@@ -319,7 +36,6 @@
                                                         <span class="h1 fw-bold mb-0">Shopy</span>
                                                     </div>
                                                     <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Dodavanje recenzije za porudžbinu</h5>
-
                                                     <hr />
                                                     <div>
                                                         <h2 id="pid"></h2>
@@ -332,8 +48,6 @@
                                                         <p class="text-success fw-semibold fs-4" id="ukupaniznos"></p>
                                                     </div>
                                                     <hr />
-                                                    <br />
-
                                                     <div id="divgreske" class="alert alert-danger d-flex align-items-center" role="alert">
                                                         <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-exclamation-mark" width="24" height="24" viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                                             <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -343,7 +57,7 @@
                                                         <span id="greske">
                                                         </span>
                                                     </div>
-                                                    <div class="form-outline mb-4">
+                                                    <div class="form-outline mb-4 pt-1">
                                                         <label class="form-label" for="naslov">Naslov recenzije</label>
                                                         <input type="text" id="naslov" autofocus class="form-control form-control-lg" required />
                                                         <span id="g1" class="invalid-feedback">Molimo Vas popunite ovo polje.</span>
@@ -363,10 +77,10 @@
                                                         <br />
                                                         <img id="pregled" alt="pregled" src="/Images/productplc.jpg" width="80" height="80" class="img-fluid" />
                                                     </div>
-                                                    <p class="my-3 pb-lg-2 fw-bold text-danger">
-                                                        Recenzija će biti vidljiva isključivo administratorima. Kada administrator odobri recenziju ona postaje vidljiva na platformi Shopy.
+                                                    <p class="my-2 pb-lg-2 fw-bold text-danger">
+                                                        Recenzija će biti vidljiva isključivo administratorima. Kada administrator odobri recenziju ona postaje vidljiva na platformi.
                                                     </p>
-                                                    <div class="pt-1 mb-4">
+                                                    <div class="pt-1 mb-0">
                                                         <button class="btn btn-dark btn-lg btn-block" id="dodajrecenzijubtn" type="button">Dodavanje recenzije</button>
                                                     </div>
                                                 </form>
