update incostinces and add test data

--- a/Shopy/Proizvod.html
+++ b/Shopy/Proizvod.html
@@ -37,7 +37,7 @@
                     <div class="fs-5 mb-5">
                         <span class="text-decoration" id="cena"></span>
                     </div>
-                    <p class="lead text-wrap text-break" id="opis"></p>
+                    <p class="lead text-break" style="white-space: pre-wrap;" id="opis"></p>
                     <div class="d-flex pt-4 align-items-center">
                         <input class="form-control text-center me-3 border-2 border-secondary-subtle fs-5" id="kolicina" type="number" value="1" min="1" style="max-width: 4rem" />
                         <button class="btn btn-outline-dark flex-shrink-0 btn-lg" type="button" id="porucibtn"> 🛒 Poručite proizvod</button>&emsp;
