UI update with icons

--- a/Shopy/OtkaziPorudzbinu.html
+++ b/Shopy/OtkaziPorudzbinu.html
@@ -4,6 +4,7 @@
     <title>Otkazivanje Porudžbine - Shopy</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <script src="Scripts/jquery-3.7.0.min.js"></script>
     <script src="Scripts/api/auth/auth-base.js"></script>
     <script src="Scripts/api/orders/orders-cancellation.js"></script>
 </head>
